Fixed education-page card overflow with animations

--- a/src/components/education/education.scss
+++ b/src/components/education/education.scss
@@ -37,6 +37,7 @@
       flex: 0 0 auto;
       background-color: rgba(250, 250, 250, 0.2);
       margin: 0 8em 0 0;
+      overflow-y: hidden;
       text-align: left;
       width: 90%;
 
@@ -86,7 +87,7 @@
             border-radius: 3px;
             box-shadow: 3px 3px 4px $selectable;
             height: auto;
-            margin: 0 2em;
+            margin: 2em 2em 0 2em;
             max-width: 800px;
             min-width: 0;
             width: 90%;
@@ -123,7 +124,8 @@
   justify-content: space-evenly;
   align-items: center;
 
-  margin-bottom: 2em;     
+  margin-bottom: 2em;
+  overflow: hidden;   
 }
 
 .mobile-story-view {
